# data_viz_kul

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_marimo.yml  test.yml
marimo/: assignment.py  assignment_at.py  deployment.py  implementation_at.py  implementation_atwd.py  implementation_wd.py  preprocessing.py
marimo/public/: filling.csv  ghosts.csv  subset.csv
preprocessing/: preprocessing.py
scripts/: gen_index.py
